--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-ts-tradingview-widgets": "^1.2.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
